# ml-feature-mcp

./: .gitignore  CLAUDE.md  GUIDE.md  Makefile  PLAN.md  PROGRESS.md  README.md  chat.py  generate_data.py  main.py  mcp_client.py  mcp_server.py  pyproject.toml  server.py  system_prompt.py
feature_repo/: feature_definitions.py
mcp_servers/: feast_server.py
tests/: test_client.py  test_server.py  test_tools.py
